--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       --ring: rgba(14,165,233,.35);
       --shadow: 0 10px 30px rgba(2,8,23,.45);
     }
-    :root.light { --bg:#f8fafc; --bg-soft:#ffffff; --card:#ffffff; --text:#0b1220; --muted:#334155; --ring:rgba(14,165,233,.25); }
-:root.dark { --bg:#0b1220; --bg-soft:#0f172a; --card:#11192c; --text:#e5e7eb; --muted:#9ca3af; --ring:rgba(14,165,233,.35); }
+    html.light { --bg:#f8fafc; --bg-soft:#ffffff; --card:#ffffff; --text:#0b1220; --muted:#334155; --ring:rgba(14,165,233,.25); }
+html.dark { --bg:#0b1220; --bg-soft:#0f172a; --card:#11192c; --text:#e5e7eb; --muted:#9ca3af; --ring:rgba(14,165,233,.35); }
     }
 
     * { box-sizing: border-box }
